--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,12 @@
         <version>1.8.5</version>
         <scope>test</scope>
       </dependency>
+             
+      <dependency>
+         <groupId>javax.servlet</groupId>
+         <artifactId>jstl</artifactId>
+         <version>1.1.1</version>
+       </dependency>
     </dependencies>
   </dependencyManagement>
 
